Fix filter toolbar menu's alignment

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -759,6 +759,10 @@ tr.commentOwner div.commentInfo span.commentEditBtn {
 	.commentBoxArea {
 		border-radius: 10px;
 		border: 1px solid @color_border_commentBoxArea;
+		div [id$="_filter-toolbar"]
+		{
+			float: right;
+		}
 	}
 	.rightTopBoxArea {
 		display: inline-flex;
